docs: Java 16 comment: use 'toList()' instead of 'collect(Collectors.toList())'